--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,9 @@ dependencies:
   font_awesome_flutter: ^9.2.0
   google_fonts: ^2.2.0
   percent_indicator: ^4.0.0
+  data_connection_checker: ^0.3.4
+  connectivity: ^3.0.6
+  flutter_datetime_picker: ^1.5.1
 
 dev_dependencies:
   flutter_test:
