--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,9 @@ dependencies:
   data_connection_checker: ^0.3.4
   connectivity: ^3.0.6
   flutter_datetime_picker: ^1.5.1
+  image_cropper: ^1.4.1
+  image_picker: ^0.8.4+5
+  modal_bottom_sheet: ^2.0.0
 
 dev_dependencies:
   flutter_test:
